# TeleSculptor

./: .clang-format  .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGMENTS  BUILDINFO.in  CMakeLists.txt  CTestConfig.cmake  KITWARE_LICENSE.txt  LICENSE  README  README.md  README.rst  maptkConfig-install.cmake.in  maptkConfig.cmake.in
doc/: CMakeLists.txt  EXAMPLES.rst  advancedconfig.rst  advancedtools.rst  cameracalibration.rst  computeoptions.rst  computesettings.rst  conf.py  glossary.rst  index.rst  installation.rst  interface.rst  processingsteps.rst  replacements.rst  views.rst  workflows.rst
doc/manuals/: CMakeLists.txt  FindDocUtils.py  advancedconfig.rst  cameracalibration.rst  create_manual.py.in  default.css  gui.rst  installation.rst  processingsteps.rst  telesculptor-user-guide.rst  telesculptor.rst  version.rst  workflows.rst
doc/rel_notes/: 0.1.0.txt  0.1.1.txt  0.1.2.txt  0.10.0.txt  0.10.1.txt  0.11.0.txt  0.2.0.txt  0.2.1.txt  0.3.0.txt  0.3.1.txt  0.4.0.txt  0.4.1.txt  0.4.2.txt  0.5.0.txt  0.5.1.txt  0.6.0.txt  0.6.1.txt  0.7.0.txt  0.7.1.txt  0.7.2.txt  0.8.0.txt  0.8.1.txt  0.9.0.txt  0.9.1.txt  1.0.0.txt  afrl_pending_approval.post_20150205.txt  afrl_pending_approval.post_20150505.txt  afrl_pending_approval.post_20150731.txt  afrl_pending_approval.post_20151015.txt  afrl_pending_approval.post_20160210.txt  afrl_pending_approval.post_20160330.txt  afrl_pending_approval.post_20160520.txt  afrl_pending_approval.post_20161220.txt  release.txt
doc/release-notes/: 0.1.1.txt  0.4.0.txt  0.4.2.txt  0.6.0.txt  0.7.0.txt  0.7.1.txt  0.7.2.txt  1.0.0.txt  1.1.0.txt  1.1.2.txt  1.2.0.txt  afrl_pending_approval.txt  afrl_pr_submitted_2018-15-03.txt  afrl_request_approval_2019-10-07.txt  afrl_requested_approval_2018-11-30.txt  afrl_submitted_for_approval_2019-04-08.txt  master.txt  release.txt  socom_pending_approval.txt
gui/: AboutDialog.cxx  AboutDialog.h  AboutDialog.ui  ActorColorButton.cxx  ActorColorButton.h  CMakeLists.txt  CameraOptions.cxx  CameraOptions.h  CameraOptions.ui  CameraView.cxx  CameraView.h  CameraView.ui  ColorizeSurfaceOptions.cxx  ColorizeSurfaceOptions.h  ColorizeSurfaceOptions.ui  DataArrays.h  DataColorOptions.cxx  DataColorOptions.h  DataColorOptions.ui  DataFilterOptions.cxx  DataFilterOptions.h  DataFilterOptions.ui  DepthMapFilterOptions.cpp  DepthMapFilterOptions.cxx  DepthMapFilterOptions.h  DepthMapFilterOptions.ui  DepthMapOptions.cpp  DepthMapOptions.cxx  DepthMapOptions.h  DepthMapOptions.ui  DepthMapPaths.h  DepthMapView.cpp  DepthMapView.cxx  DepthMapView.h  DepthMapView.ui  DepthMapViewOptions.cxx  DepthMapViewOptions.h  DepthMapViewOptions.ui  DepthMapViewWindow.cxx  DepthMapViewWindow.h  (+111 more)
gui/icons/: icons.qrc  telesculptor.icns
gui/tools/: AbstractTool.cxx  AbstractTool.h  BundleAdjustTool.cxx  BundleAdjustTool.h  CanonicalTransformTool.cxx  CanonicalTransformTool.h  ComputeAllDepthTool.cxx  ComputeAllDepthTool.h  ComputeDepthTool.cxx  ComputeDepthTool.h  ConfigHelper.h  FuseDepthTool.cxx  FuseDepthTool.h  Helper.h  InitCamerasLandmarksTool.cxx  InitCamerasLandmarksTool.h  MeshColoration.cxx  MeshColoration.h  NeckerReversalTool.cxx  NeckerReversalTool.h  ReconstructionData.cxx  ReconstructionData.h  RunAllTool.cxx  RunAllTool.h  SaveFrameTool.cxx  SaveFrameTool.h  SaveKeyFrameTool.cxx  SaveKeyFrameTool.h  TrackFeaturesSprokitTool.cxx  TrackFeaturesSprokitTool.h  TrackFeaturesSprokitTool.pipe  TrackFeaturesTool.cxx  TrackFeaturesTool.h  TrackFilterTool.cxx  TrackFilterTool.h  TriangulateTool.cxx  TriangulateTool.h  UndistortFramesTool.cxx  UndistortFramesTool.h
maptk/: CMakeLists.txt  algorithm_plugin_manager.cxx  algorithm_plugin_manager.h  algorithm_plugin_manager_static.cxx  algorithm_plugin_manager_static.h  camera.cxx  camera.h  camera_intrinsics.cxx  camera_intrinsics.h  camera_io.cxx  camera_io.h  camera_map.h  camera_map_io.cxx  camera_map_io.h  cmake_translation_macros.h  colorize.cxx  colorize.h  config.h.in  config_block.cxx  config_block.h  config_block_io.cxx  config_block_io.h  covariance.h  descriptor.h  descriptor_set.h  eigen_io.h  epipolar_geometry.cxx  epipolar_geometry.h  essential_matrix.cxx  essential_matrix.h  exceptions.h  feature.cxx  feature.h  feature_set.h  geo_reference_points_io.cxx  geo_reference_points_io.h  ground_control_point.cxx  ground_control_point.h  homography-instances.cxx  homography.cxx  (+64 more)
maptk/algo/: algorithm.cxx  algorithm.h  algorithm.txx  analyze_tracks.cxx  analyze_tracks.h  bundle_adjust.cxx  bundle_adjust.h  close_loops.cxx  close_loops.h  compute_ref_homography.cxx  compute_ref_homography.h  convert_image.cxx  convert_image.h  detect_features.cxx  detect_features.h  draw_tracks.cxx  draw_tracks.h  estimate_essential_matrix.cxx  estimate_essential_matrix.h  estimate_homography.cxx  estimate_homography.h  estimate_similarity_transform.cxx  estimate_similarity_transform.h  extract_descriptors.cxx  extract_descriptors.h  feature_set_filter.cxx  feature_set_filter.h  filter_features.cxx  filter_features.h  geo_map.cxx  geo_map.h  image_io.cxx  image_io.h  initialize_cameras_landmarks.cxx  initialize_cameras_landmarks.h  match_features.cxx  match_features.h  optimize_cameras.cxx  optimize_cameras.h  track_features.cxx  (+3 more)
maptk/c/: CMakeLists.txt  algorithm.cxx  algorithm.h  algorithm_plugin_manager.cxx  algorithm_plugin_manager.h  c_utils.h  camera.cxx  camera.h  camera_map.cxx  camera_map.h  common.cxx  common.h  config.h  config_block.cxx  config_block.h  error_handle.cxx  error_handle.h  image.cxx  image.h  image_container.cxx  image_container.h  track.cxx  track.h  track_set.cxx  track_set.h
maptk/core/: CMakeLists.txt  camera.cxx  camera.h  camera_intrinsics.cxx  camera_intrinsics.h  (+70 more)
tests/: CMakeLists.txt  boost-test_random_point.h.in  test_common.h  test_math.h  test_random_point.h  test_random_point.h.in  test_scene.h
tools/: CMakeLists.txt  analyze_tracks.cxx  apply_gcp.cxx  bundle_adjust_tracks.cxx  detect_and_describe.cxx  estimate_homography.cxx  match_matrix.cxx  pos2krtd.cxx  stitch_shots.cxx  tool_common.h  track_features.cxx  undistort_frames.cxx
(+853 files in other folders)
